@startuml
title 3 Layers - Tạo Phiếu Đăng Ký

skinparam dpi 180
skinparam shadowing false
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "Lớp giao diện" #EAF8E4 {

class MHLapPhieuDangKy{

+txtHoTen : textbox
+cboGioiTinh : ComboBox
+txtSDT : textbox
+txtEmail : textbox
+txtDiaChi : textbox

+cboLoaiGiayTo : ComboBox
+txtSoGiayTo : textbox

+cboSoNguoi : ComboBox
+cboLoaiPhong : ComboBox
+cboLoaiHinhThue : ComboBox
+cboThoiHanThue : ComboBox

+cboKhuVucMongMuon : ComboBox
+cboMucGiaMongMuon : ComboBox

+dtpNgayDuKien : DateTimePicker

+chkTienIch : CheckBoxGroup

+txtGhiChu : textbox

+btnHuy_Click()

+btnTaoPhieuDangKy_Click()

+hienThiForm()

}

}

package "Lớp nghiệp vụ" #FFF2CC {

class PhieuDangKy{

+maPDK : string
+khuVuc : string
+soLuongNguoi : string
+loaiDichVu : string
+mucGia : string
+thoiGianDuKienVao : Date
+thoiHanThue : string
+yeuCauKhac : string
+TrangThai : string
+maNV : string

+taoPhieuDangKy(ThongTinPDK)

+kiemTraDieuKien()

}

class KhachHang{

+maKH : string
+HoTen : String
+GioiTinh : string
+SDT : string
+Email : string
+DiaChi : string
+LoaiGiayTo : string
+SoGiayTo : string

+taoKhachHang(ThongTinKH)

+kiemTraTonTai(soGiayTo)

}

}

package "Lớp truy xuất dữ liệu" #D6EAF8 {

class PhieuDangKyDB{

+themPhieuDangKy(PhieuDangKy)

+capNhatPhieuDangKy(maPDK)

+xoaPhieuDangKy(maPDK)

+layPhieuDangKyTheoMa(maPDK)

}

class KhachHangDB{

+themKhachHang(KhachHang)

+capNhatKhachHang(maKH)

+xoaKhachHang(maKH)

+TimKhachHangTheoSoGiayTo(soGiayTo)

}

}

MHLapPhieuDangKy --> PhieuDangKy
MHLapPhieuDangKy --> KhachHang

PhieuDangKy --> PhieuDangKyDB
KhachHang --> KhachHangDB

@enduml